fixtures/frontend/milestone-2/invalid/ambiguous-domain-member/main.aivi
domain Duration over Int
    make : Int -> Duration

domain Count over Int
    make : Int -> Count

val bad = make 1
